--- a/未命名.md
+++ b/未命名.md
@@ -87,78 +87,228 @@ $q^{-1} = \frac{1}{a^2+b^2+c^2+d^2}(a-bi-cj-dk)$
 --------------
 
 
-I'll sit here and we'll stop the lectures, but you can individually come and ask me questions in the next half hour. Okay, goodbye. I hope you have no difficulties with your exercises.
 
-I distributed a new syllabus. I want to remind you of two things. First, it says material not covered by the book will not be included in the midterm nor in the final.
+So it's equal to v zero times square root of 2h over g. It is equal to fifty-five point zero meters times the square root of 2 times 500 meters divided by 9.78 meters per second squared.
 
-Because some of the things I say are in the book and some are not. The part that is not in the book is not included in the two midterms. So if you are preparing for the midterms, don't be afraid that you don't fully understand the things other than what I say in the book.
+I now want to give you two rules. First, do not substitute, do not use numbers until the end. Do not use numbers until the end. 
 
-In this way, you can feel more at ease. Also, at the bottom of this page, I wrote something about some books that I would recommend. I recommend a book by James Jeans called The Mysterious Universe.
+This is a trick. The deal is check the dimension. What is check the dimension? First, look at this. 
 
-I think there is a Chinese translation of this book. The reason why I am telling you this is because last week, a student came to me and said that he read a book that he didn't understand. The book he showed me was called Green.
+There is a meter here. This meter is eliminated. This second squared is at the bottom of the molecule, so it becomes second squared. 
 
-It is a relatively new book. I told him not to read this kind of book. Because if you ask me about this kind of book, I think it is a misunderstanding.
+Second squared is at the beginning. Oh, I got this wrong. This is fifty-five point zero meters per second. 
 
-Because what it talks about is Green. Green is a professor at Columbia University. I think he is in his forties or fifties.
+Second squared is at the bottom of the molecule, so it becomes a meter. So it's right. If you get to this point, it's easy to check. 
 
-The direction he is going is what many young people are doing now. But this direction is now a hollow. It hasn't been implemented yet.
+If this check is wrong, then your formula is a little wrong. If you use these two, it's easy to calculate. Does everybody understand the two rules that I mentioned? Especially during examination, you are under pressure. 
 
-And it is unlikely to be implemented in the future. But if a young person doesn't know this, I think the most likely phenomenon is that he is attracted to an unstable direction. This is very bad.
+Do not put in the numbers until the very end. If you put in numbers, you are likely to make mistakes, and then the mistakes would compound itself so that eventually you would have a paper which is very messy and wrong. Next, we'll talk about the circular motion, uniform circular motion.
 
-James Jeans is a great astrophysicist in the early 20th century. What is described in this book concerns the great revolutions of the beginning of the 20th century, namely special relativity, general relativity, and quantum mechanics. At the time that Jeans wrote the book, these were already revolutions which have materialized.
+I was in a boarding school in Tsinghua Park. The school is still there, but now it's a union or something. It's on the west side of the second school gate. 
 
-他们已经现实化了。 These were revolutions that affected the history of mankind. 这个跟空中楼阁是完全不一样的。 所以你们在读这些书的时候应该有个取舍。 The other journal that I recommend is Scientific American. Scientific American 现在有中文的翻译。 You could read either the Chinese version or the English version.
+Then I finished elementary school there and went to Chongde Middle School. It's in the city. Now it's Rongxiang Hutong No. 
 
-The Scientific American would have articles about the kind of thing that Mr. Green writes about. But most of it concerns more realistic and 不是空中楼阁的这种研究。 Much of it concerns biology, for example. I highly recommend this to you for the following reason.
+21. I studied there for four years. I finished my first year of high school and then the war began. 
 
-The educational system in China tends to make students concentrated and just go into one direction. The educational system, especially in America, is the opposite. It has a tendency to want students to learn a lot of things.
+In my second year of high school, I went to two schools, first in Hefei and then in Kunming. So I didn't study physics in high school. I studied a little bit of physics in junior high school, but I didn't discuss uniform circular motion.
 
-Both of them have advantages and disadvantages. But because you have been educated under the Chinese educational system, so you should perhaps absorb some of the advantages of the other system. 所以你如果是把你的视野放宽一点, it's good.
+In my second year of high school, I didn't study physics in junior high school. Then in the summer of 1938, I finished my second year of high school. The Ministry of Education said that there were too many middle school students, so they didn't want to study in uniform circular motion. 
 
-If you start to read Scientific American, you will find that many of the articles you have difficulty understanding. Don't worry about that. Just keep on reading it.
+So I decided to take the college entrance exam. In the entrance exam, there was always physics, so I had to study physics myself. So I studied physics for a month. 
 
-And after you have read it for half a year, you would realize that many of the things that you at first do not understand, you now understand much better. And this is a way to learn. Because I have some appointment this afternoon, so this afternoon's consultation period from 4 to 5 is canceled.
+In this month, I found a textbook. I don't remember what kind of textbook it was. I studied it for a month and took the exam. 
 
-But I shall schedule it for tomorrow. But just for this week. 这个礼拜改成礼拜二。 OK, 底下我们讲第四章。 第四章是we discuss motions in two dimensions or three dimensions.
+This month had a decisive impact on my life. Why? Because when I applied for the college entrance exam, I was transferred to the Department of Chemistry. I found that physics was very interesting, so I decided to study physics. 
 
-It's actually very similar to the problems of motion in one dimension. First, if you have a body which is moving in two dimensions like this, from this point to this point, there's a displacement. So there's a displacement, which is a vector.
+So as soon as I entered the college, I immediately transferred from the Department of Chemistry to the Department of Physics. Why do I think physics is very interesting? I still remember very clearly which concept made me change my mind about physics. It was the concept of uniform circular motion.
 
-The coordinate of a particle would be designated by R. It's a vector in three dimensions. It's a three dimensional vector starting from some origin. So from this point to this point of the average velocity, average velocity is equal to the displacement divided by shijian.
+I used to have an intuition. I think you all have an intuition. Intuition.
 
-The displacement is a three dimensional vector. So this velocity is also a three dimensional vector. We can express R like this.
+When it comes to uniform circular motion, the most important thing is the tangent vector. I think a child would have this kind of intuition. But the book told me that the acceleration is not in that direction. 
 
-Or you can write it as xi plus yj plus zk, where i, j, k are the three unit vectors along the x axis, y axis, and z axis. A right handed system. After we have the definition of the average velocity, we can have an instantaneous velocity.
+It is perpendicular to it. Its velocity is like this. Its acceleration is like this. 
 
-Namely, we make this delta t smaller and smaller. Now, I'm going to draw a larger diagram. If delta t is this, the displacement is in this direction, so the average velocity is also in this direction.
+I found this very strange at the beginning. But when I understood it, I realized that if you sit in a car and the car is turning, the pressure you are under is perpendicular. So physics theory actually matches your experience.
 
-It's equal to this vector divided by delta t. Now if I take a smaller delta t, I may be going this way. So this is a... This divided by the smaller delta t is the average velocity during this shorter period. If I now shrink delta t to zero, which direction would be the average velocity? Obviously it would become along the tangent direction.
+I thought this was very interesting, so I changed my mind about physics. After thinking about this, I came to a conclusion. This conclusion is very important for you to study anything, especially physics. 
 
-So we have the idea of instantaneous velocity. And that's equal to the limit. Of delta r over delta t, as delta t goes to zero.
+A person has all kinds of intuitions at any time. When you are young, you have an intuition to survive. Even a dog knows that the straight line is the shortest distance.
 
-That's the definition of the instantaneous velocity. Usually that's just called velocity. Delta r, as delta t goes to zero, delta r becomes smaller and smaller.
+This is an intuition. So we have some intuitions. If you want to survive, you must have an intuition.
 
-But delta t also becomes smaller and smaller. So the ratio, delta r over delta t, approaches a finite number. And that's what the...so this is the velocity.
+When you are learning something, sometimes the result is different from your intuition. I found that the acceleration is not in that direction. It is perpendicular to it.
 
-This is exactly similar to what we have discussed last time about motion in one dimension. There is very little difference. It's just that we write it as a three-dimensional vector.
+When I first saw this, I thought it was different from my intuition. In this case, it is the most important thing to learn. You have to think about it clearly. 
 
-Of course, with this, we now have also the concept of average acceleration. Just a second. This, by definition, is equal to the derivative of r with respect to t. Such a limit is a derivative.
+You can't give up. If you think about it very clearly, you will change your intuition. Then you will have a more correct intuition.
 
-The instantaneous acceleration is equal to the next derivative. We shall have an explicit example of what this acceleration is. Next we talk about projectile motion.
+In other words, you have to want to turn your new knowledge into your increased intuition at any time. This increased intuition is very important. A lot of my research work is about symmetry.
 
-Projectile is the motion of a projectile. By definition, the acceleration, instantaneous acceleration, is equal to d squared r dt squared. So I take this r and take the derivative.
+Symmetry is a very complicated concept. You have a mathematical formula. This is not enough.
 
-So I get d squared x dt squared i plus d squared y dt squared j plus d squared z dt squared k. In other words, the three components of the acceleration are separately calculated. The x component of the acceleration only relates to x as a function of t. x is a function of t. So a projectile comes out. Suppose this is the x-axis, this is the z-axis, this is the x-axis, this is the y-axis.
+You have to turn that mathematical formula into your intuition. The first time I learned about this was when I went to the United States to study at Chicago University. I learned from Taylor.
 
-The x-axis motion, x as a function of t, has nothing to do with y as a function of t or z as a function of t. So what is the characteristic of a projectile motion? The three components of the acceleration, only the z-axis has acceleration. The x-axis and the y-axis have no acceleration. Only the z-axis has acceleration.
+Taylor later became very famous because he was the father of the hydrogen bomb. Because he invented a trick in the American hydrogen bomb. After talking to him, I found that he was very good at the principle of symmetry.
 
-So the definition of projectile motion is that this quantity is equal to negative g. It is equal to a unit vector in the z-direction multiplied by a negative g. So the reason for the negative is that we always take the x-axis to go upwards. So what does this represent? This represents d2x dt is equal to 0, d2y dt is equal to d2z. In other words, the x-axis has no acceleration.
+But he didn't know what it was. Gradually, I found that his principle of symmetry was in his intuition. But his intuition could not turn it into a formula.
 
-The y-axis is the same. The z-axis is a uniform acceleration motion. d2x dt2 represents that the x-axis motion has no acceleration.
+This gave me a very deep impression. In other words, learning, especially complex physics, has specific things and intuitions. These two have to complement each other.
 
-So what does dx dt represent? The acceleration in the x-axis is 0, which means that there is no acceleration. If there is no acceleration, it means that it is a uniform velocity. So dx dt is equal to constant.
+If these two are not right, you have to sit down and think carefully. Why is your original intuition wrong? When you think about this clearly, you turn what you infer into your new intuition. Then you are one step closer.
 
-Constant means that it is a fixed constant. At this time, we can write it as xvx0. This is the velocity when the x-axis is at t equal to 0. Similarly, dy dt is equal to vy0.
+This is a very important way to learn. If you can't figure it out, you can't just let it go. This won't work.
 
-The acceleration of the z-axis is negative g. This means that the acceleration of each unit increases the velocity of the z-axis by negative g. So dz dt is equal to negative g.
+Because next time you have a similar situation, you won't go back on your words. The uniform circular motion, or acceleration motion, is actually very simple. Why? Because the magnitude of this acceleration... We have to prove this.
+
+I'll write down the formula first. Magnitude is V squared over R. R is its radius, V is its velocity. Direction, towards center.
+
+This is called centripetal. Centripetal acceleration. Centripetal is centripetal.
+
+Centrifugal is centrifugal. There is a term called centrifugal force. Centrifugal force... You'd better forget this term.
+
+Its acceleration is centripetal. This is centripetal. Centripetal acceleration.
+
+Centrifugal force. We have to prove this formula. At this point, it has a velocity like this.
+
+It's its tangent. At this point, it's still the same. The length of the velocity vector is the same.
+
+But it has changed direction. For example, this is V prime. V prime is the V after this.
+
+So, what is acceleration? It's delta V. We have to calculate acceleration. It's delta V over delta t. It's the average acceleration. Then you have to draw a... This is V. This is V prime.
+
+This is delta V. So, average acceleration is equal to V prime minus V divided by delta t. V prime minus V is a small... Let me draw it bigger. This is V. This is V prime. This is delta V. This is theta.
+
+Or delta theta. These two are perpendicular to each other. So, this is also delta theta.
+
+What is delta theta? Its velocity is V. Its radius is r. So, V over r is the angular velocity. This angular velocity is used for radii.
+
+(该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
+
+
+(转录由TurboScribe.ai完成。升级到无限以移除此消息。)
+
+So this is delta theta. So our average velocity, our average acceleration is equal to v prime minus v divided by delta theta times r. v prime minus v is a vector. This vector is a triangle. 
+
+When this triangle collapses into a line, where is the direction of delta v? Of course it is perpendicular to v. So the first statement is, as delta t goes to zero, the triangle, this triangle, collapses. The delta v direction has a direction perpendicular to v, i.e. centripetal. This is the first statement about its direction.
+
+The second statement is about its size. What is the size? What is the magnitude of v prime minus v? What is the length of delta v? What is the length of delta v? Of course you draw a line here. This is an equilateral triangle, so it is equal to half of two times.
+
+What is half? It is v times sine of delta theta over two. Do you agree or not? Do you agree or not? This is two equilateral triangles. Each equilateral triangle has a length of two times v times sine of this angle.
+
+The magnitude of the average velocity is equal to v over r delta theta times two times v times sine of delta theta over two. This is equal to v squared over r times two times sine of delta theta over two divided by delta theta. I write delta theta over two like this.
+
+This quantity, sine of delta theta over two divided by delta theta over two. When delta theta becomes zero, it becomes one. So this becomes v squared over r. Here we use a formula.
+
+The formula is sine of an angle phi divided by phi to approach one. We use this formula. If I don't make phi small, there is a more accurate formula.
+
+Who knows this formula? Who knows what sine of phi is? Raise your hand if you know. What is it? Phi minus phi cubed divided by three factorial plus phi five times divided by five factorial. It is also in the appendix.
+
+If you accept this formula, Newton would know. In fact, Newton knew it before. China has never developed a formula like this.
+
+It has a close relationship with modern science that China has never developed. But if you accept this formula, when you divide this by phi, both sides are divided by phi, the first term is one. The rest is at least phi squared.
+
+So when phi is very small, it is gone. So it becomes one. These two are very important formulas.
+
+Okay, do we have a proof now? Let's think about what's going on. When something is doing a circle, the meaning of acceleration is how does the velocity change. The velocity now is in the tangent direction.
+
+Later, the direction of the tangent is slightly inward. So there is a change in the middle. The direction of that change is positive in the end.
+
+And its magnitude needs to go through this calculation. This calculation is very simple. This formula is very important.
+
+As I said before, is there any problem with the circular motion? If it is a non-uniform motion, what will happen? If it moves faster and faster, you can imagine that it will happen. In addition to an acceleration in the direction of the tangent, there is also an acceleration in the direction of the tangent. The reason why there is no acceleration in the direction of the tangent is because its length is not increasing.
+
+Let's change that a little bit. which Newton realized. So Newton studied how Earth goes around the Sun.
+
+The acceleration is not uniform circular motion. So therefore, when you talk about that, you need an acceleration which both has a tangential component and a component perpendicular to the tangent. What we have done is a geometrical proof.
+
+Now I want to do the same thing, but an algebraic proof of the same. Let's write the coordinates first. Let's assume that it's going through a motion like this.
+
+Let us define omega. Omega is equal to angular velocity. So it's equal to V over R. Normally, in physics, the speed of the foot is written as omega.
+
+This is x. This is y. So what is x equal to? x is equal to R cosine omega t. y is equal to R sine omega t. Let's calculate the velocity. It's dx dt. Who can differentiate cosine omega t? What's the derivative of cosine x? It's minus sine x. This is not cosine x. It's cosine omega t. So we have to use a chain rule.
+
+If you haven't learned this, you will learn it in a few days. You have to make it an intuition. You don't have to think about it.
+
+So it's equal to minus omega sine omega t. And what about dy dt? Is it equal to R or what? It's equal to R cosine omega t. Because the derivative of sine is equal to plus cosine. The derivative of cosine is equal to minus sine. Let me differentiate again.
+
+d square x dt square is equal to minus R omega square cosine omega t. It's equal to d square y dt square is equal to minus R omega square R sine omega t. But what's the derivative of this? It's equal to... So d square x dt square is equal to minus omega square x d square y dt square is equal to minus omega square y. In other words, d square R dt square is equal to minus omega square R. So this is equal to... Omega square is V square over R square times R. Then you can write it as minus V square over R times R over R. What is R over R? It's the unit vector in the direction of R. What's the derivative of R over R? It's the unit vector in the direction of R. So this means that the acceleration is positive. The direction is positive. Its magnitude is V square over R. This is what we just proved by geometry.
+
+Do you like geometry or algebra? The answer is you like both. It's one thing to like both. But as we said last time, each has its own advantages.
+
+In fact, when it comes to complex things, you can like both. But in general, geometry is more intuitive. In addition, everyone who studies physics, theoretical physics, or mathematics has a preference.
+
+Some people like geometry more. Some people like algebra more. You can't force it.
+
+But people who like geometry should also know how algebra is done and vice versa. I've been talking for a long time. In fact, I think we've been talking for two and a half lectures.
+
+There's nothing complicated. It's just that the Uniform Circular Motion is a little bit complicated. It's all very simple.
+
+What I'm going to talk about is not in the lecture. Because I mentioned it last time. Maybe some people who are interested in this don't quite understand what I'm talking about.
+
+I'll make it a little bit more detailed. I introduce a concept called Transfinite Numbers. It's infinite.
+
+Usually two things are the same. For example, you say three biscuits are the same as three pens. What does that mean? If you analyze it carefully, it can become one-to-one correspondence.
+
+You can arrange three biscuits into a row, and three pens into a row, and match them one by one. What's the advantage of this? Three biscuits can't match four pens. Four pens are more than three biscuits.
+
+So we have an intuition. There is a concept that what is the same number, what is the same number, which one is bigger than the other. In the past, everyone just talked about this.
+
+But in the 19th century, some people started to discuss what the Transfinite Numbers were. When you think about it, there are a lot of things you didn't think about when you didn't think about it before. For example, can all the odd numbers match all the even numbers? Of course.
+
+Let's say n matches 2n. On the other side, I arrange n, 1, 2, 3, 4, 5, 6, 7, 8. On the other side, I arrange 2n, 2, 4, 6, 8, etc. Of course, they can match one by one.
+
+So this proves that all the odd numbers are as many as all the even numbers. So when you use the concept of matching one by one to infinite numbers, a phenomenon occurs. Of course, all the even numbers are just half of all the even numbers.
+
+But they can match one by one. In other words, when you use the concept of infinite numbers, some of them can match all the even numbers. So you can also say that they are as many as all the even numbers.
+
+This is a big difference between the concept of infinite numbers and the concept of even numbers. This is a big difference between the concept of infinite numbers This is what the 19th century mathematicians started to think about. The question just now is not detailed enough.
+
+In other words, all the even numbers can match all the even numbers. This is not detailed enough. In fact, all the even numbers or positive numbers Actually, positive numbers can also be taken into consideration.
+
+Simply put, all positive fractions can be made into one-one correspondence with all integers, all positive integers. All positive fractions, that is, a over b, a and b are all positive integers. All positive fractions can be made into one-one correspondence with all positive integers.
+
+Why can I say this? It's very simple. I write all the positive integers, all the positive fractions. This is 1 over 1, 1 over 2, 1 over 3, 1 over 4, 2 over 1, 2 over 2, 2 over 3, 2 over 4, 3 over 1, 3 over 2, 3 over 3, 3 over 4. In this way, we can write an infinite table.
+
+All the positive integers and all the positive fractions can be made into one-one correspondence. In fact, one even number is more than one. How can I correspond all the positive integers? It's very easy.
+
+I start from here. This is 2. 1, 2, 3, 4. There are many ways. In this way, you can go through the whole infinite table.
+
+Isn't there one-to-one correspondence? In fact, you can make all the positive integers correspond to all the fractions more than once. In other words, you can make all the integers correspond to all the fractions. So we can say all positive integers are equal to all positive fractions.
+
+It's very interesting. Why? If you take all the integers from 0 to 1, there are so many fractions. 1 over 2, 1 over 4. 1 over 2 is equal to 161 divided by 320.
+
+It's very close to 1 over 2. You can be very close There are so many fractions. It's dense. If you put 0 and 1 here, all the fractions are dense everywhere.
+
+No matter how many integers you take, there are so many fractions. How can they correspond to all the fractions? In other words, when it comes to infinite numbers, how many fractions correspond to It's totally different from common intuition. OK.
+
+Let's prove a very simple thing. All real numbers are greater than all real numbers One more point. It's totally different from common intuition.
+
+It's based on the concept of one-to-one correspondence. It's greater than all positive integers. In particular, all irrational numbers are greater than all real numbers.
+
+This proof is very simple and very famous. I don't need to prove all real numbers. I only need to prove all real numbers between 0 and 1. 0 and 1 are less than all real numbers.
+
+But 0 and 1 are greater than all positive integers. This proof is very simple. If it's not true, it means all real numbers between 0 and 1 correspond to all positive integers.
+
+Let me write it down. Otherwise, I can't prove all real numbers between 0 and 1. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. All real numbers between 0 and 1 correspond to 1, 2, 3. This side is integer. This side is real number between 0 and 1. Now I can prove that the list on the right is incomplete.
+
+Why is it incomplete? Let me take the first number. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. The fourth one corresponds to 4. Let me change it. The first one corresponds to 1. The second one corresponds to 2. Now I know the real number between 0 and 1. The first one corresponds to 1. The second one corresponds to 2. The third one corresponds to 3. The fourth one corresponds to 4. The fifth one corresponds to 5. The fifth one corresponds to 3. This is a proof.
+
+This kind of proof is often seen So what impression All the real numbers are infinite. But this infinite is less than all the real numbers. All the real numbers This is a complicated concept.
+
+It is not a simple concept. As I said before, all the fractions are everywhere dense. But although it is infinite and if you think too much it is not too much.
+
+It is just as much as all the real numbers. But if you add all the fractions it becomes all the real numbers. It is not the same as before.
+
+So there is a problem. Between the real numbers and the positive integers is there any less than the real numbers? What is less than the real numbers? It cannot correspond to the real numbers but it can correspond to a part of the real numbers. But is there any less than all the integers? This is a very famous problem.
+
+It is called Continuum Hypothesis. Continuum Hypothesis is whether there is an infinite number between all the integers all the integers and all the real numbers. I remember when I was studying at the University of New South Wales I heard about this.
+
+It was a coincidence. So I thought about it but I could not figure it out. Now I think only an expert can figure it out.
+
+This problem was solved by a mathematician called Paul Cohen in the 1960s. He proved that you can assume that there is an infinite number or an infinite number between these two integers. This logical system can develop without any internal contradictions.
+
+But you can also assume that there is none. In other words, Continuum Hypothesis cannot be decided. In the current mathematical logical system it cannot be decided whether there is an infinite number or not.
+
+It can be either there is an infinite number or not. Each of them creates a different mathematical conclusion.
 
 (该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
